--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,12 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+
+# backend/.env
+DB_HOST=localhost
+DB_USER=tu_usuario_mysql # ej: root
+DB_PASSWORD=tu_contraseña_mysql
+DB_NAME=angostura_db # El nombre que le des a tu base de datos
+JWT_SECRET=tu_secreto_muy_largo_y_seguro_para_jwt # Cambia esto por algo seguro
+PORT=5000 # Puerto para el backend
