--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-qr-code": "^2.0.18",
-    "uuid": "^13.0.0"
+    "react-qr-code": "^2.0.18"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
